--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,3 +1,5 @@
 <h2>Nome: {{ name }}</h2>
 <p>Idade: {{ age }}</p>
 <p>Profissão: {{ job }}</p>
+<p>Hobbies que mais gosta: {{ hobbies[1] }}</p>
+<p>Marca do carro: {{ car.brand }} - {{ car.year }}</p>
