--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,5 +1,8 @@
-<h2>Nome: {{ name }}</h2>
+<h2 class="title">Nome: {{ name }}</h2>
 <p>Idade: {{ age }}</p>
 <p>Profissão: {{ job }}</p>
 <p>Hobbies que mais gosta: {{ hobbies[1] }}</p>
 <p>Marca do carro: {{ car.brand }} - {{ car.year }}</p>
+<div>
+  <a href="#">Veja mais sobre a Portezan</a>
+</div>
